test/cases/compile_errors/primitive_integer_type_with_leading_zero.zig
export fn entry1() void {
    _ = u032;
}

// error
//
// :2:9: error: primitive integer type 'u032' has leading zero
